# Amplitron

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DEPLOYMENT.md  Makefile  PRESETS.md  README.md  codecov.yml  dev.sh  feature_style.css  index.html  robots.txt  script.js  sitemap.xml  styles.css
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  coverage-comment.yml  deploy-preview.yml  format-check.yml  label-pr-from-issues.yml  release.yml  update-posthog-downloads.yml
demo/: index.data  index.html  index.js  index.wasm
docs/: PRESETS.md  index.html
graphify-out/: .chunk_0.txt  .chunk_1.txt  .chunk_2.txt  .chunk_3.txt  .chunk_4.txt  .chunk_5.txt  .chunk_6.txt  .chunk_7.txt  .chunk_8.txt  .chunk_9.txt  .graphify_cached.json  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
pr-previews/pr-105/: index.js  index.wasm
pr-previews/pr-107/: index.js  index.wasm
pr-previews/pr-111/: index.js  index.wasm
pr-previews/pr-112/: index.js  index.wasm
pr-previews/pr-115/: index.js  index.wasm
pr-previews/pr-116/: index.wasm
pr-previews/pr-120/: index.html
pr-previews/pr-126/: index.js  index.wasm
pr-previews/pr-127/: index.js  index.wasm
pr-previews/pr-128/: index.js  index.wasm
pr-previews/pr-130/: index.js  index.wasm
pr-previews/pr-131/: index.js  index.wasm
pr-previews/pr-132/: index.js  index.wasm
pr-previews/pr-138/: index.js  index.wasm
pr-previews/pr-160/: index.wasm
pr-previews/pr-162/: index.js  index.wasm
pr-previews/pr-163/: index.html  index.js  index.wasm
pr-previews/pr-164/: index.wasm
pr-previews/pr-167/: index.js
pr-previews/pr-175/: index.html  index.js  index.wasm
pr-previews/pr-178/: index.wasm
pr-previews/pr-179/: index.wasm
pr-previews/pr-190/: index.wasm
pr-previews/pr-192/: index.js
pr-previews/pr-194/: index.js  index.wasm
pr-previews/pr-195/: index.wasm
pr-previews/pr-198/: coi-serviceworker.js  index.html  index.js  index.wasm
pr-previews/pr-202/: index.js  index.wasm
pr-previews/pr-203/: index.html  index.js
pr-previews/pr-204/: index.js  index.wasm
pr-previews/pr-207/: index.wasm
pr-previews/pr-208/: index.html  index.js  index.wasm
pr-previews/pr-212/: index.wasm
pr-previews/pr-214/: index.data  index.js  index.wasm
pr-previews/pr-219/: index.html
pr-previews/pr-220/: index.js  index.wasm
pr-previews/pr-228/: index.wasm
pr-previews/pr-236/: index.data  index.js  index.wasm
pr-previews/pr-239/: index.html  index.js  index.wasm
pr-previews/pr-242/: index.wasm
pr-previews/pr-243/: index.js  index.wasm
pr-previews/pr-246/: index.js  index.wasm
pr-previews/pr-247/: index.js  index.wasm
pr-previews/pr-249/: index.js  index.wasm
pr-previews/pr-271/: index.js  index.wasm
pr-previews/pr-277/: index.js  index.wasm
pr-previews/pr-278/: index.wasm
pr-previews/pr-281/: index.js  index.wasm
pr-previews/pr-286/: index.data  index.html  index.js
pr-previews/pr-287/: index.wasm
pr-previews/pr-289/: coi-serviceworker.js  index.wasm
pr-previews/pr-295/: index.wasm
pr-previews/pr-297/: index.wasm
pr-previews/pr-298/: index.wasm
pr-previews/pr-303/: index.wasm
pr-previews/pr-304/: index.js  index.wasm
pr-previews/pr-332/: index.wasm
pr-previews/pr-334/: index.wasm
pr-previews/pr-337/: index.js
pr-previews/pr-342/: index.wasm
pr-previews/pr-343/: index.data  index.js  index.wasm
pr-previews/pr-346/: index.data  index.js  index.wasm
pr-previews/pr-347/: index.js  index.wasm
pr-previews/pr-349/: index.wasm
pr-previews/pr-354/: index.js  index.wasm
pr-previews/pr-355/: index.data  index.js  index.wasm
pr-previews/pr-356/: index.data  index.html  index.js
pr-previews/pr-359/: coi-serviceworker.js
pr-previews/pr-366/: index.wasm
pr-previews/pr-367/: index.js  index.wasm
pr-previews/pr-368/: index.wasm
pr-previews/pr-369/: index.html  index.js  index.wasm
pr-previews/pr-373/: index.js  index.wasm
pr-previews/pr-78/: index.data
pr-previews/pr-89/: index.js  index.wasm
pr-previews/pr-94/: index.js  index.wasm
pr-previews/pr-99/: index.js  index.wasm
scripts/: setup_dependencies.ps1  setup_dependencies.sh
src/: SessionManager.h  amplitron_session.h  cli.h  common.h  main.cpp  preset_json.cpp  preset_json.h  preset_manager.cpp  preset_manager.h  preset_manager_dirs.cpp  preset_manager_io.cpp  session_manager.h
src/audio/: audio_backend_oboe.cpp  audio_backend_portaudio_lifecycle.cpp  audio_backend_sdl.cpp  audio_engine.cpp  audio_engine.h  audio_engine_api.cpp  audio_engine_chain.cpp  audio_engine_process.cpp  audio_graph.cpp  audio_graph.h  audio_graph_executor.cpp  audio_graph_executor.h  effect.h  recorder_wav.cpp  spsc_queue.h  tempo_engine.cpp
src/gui/: CrashRecoveryUI.h  command.h  command_reset.h  crash_recovery_ui.h  file_dialog_native.cpp  file_dialog_native_folder.cpp  file_dialog_native_open.cpp  gl_setup.h  gui_analyzer.cpp  gui_graph_state.h  gui_manager.cpp  gui_manager.h  gui_manager_frame.cpp  gui_manager_menu.cpp  gui_midi.cpp  gui_midi.h  gui_presets.cpp  gui_presets.h  gui_recording.cpp  gui_recording.h  gui_settings.cpp  gui_settings.h  gui_snapshots.cpp  gui_snapshots.h  gui_tuner.cpp  gui_tuner.h  pedal_board.cpp  pedal_board.h  pedal_board_chain.cpp  pedal_board_menu.cpp  pedal_widget.cpp  pedal_widget.h  pedal_widget_body.cpp  pedal_widget_knobs.cpp  snapshot_manager.h  theme.h  ui_component.h  update_checker.cpp  update_checker.h  window_context.cpp  (+1 more)
src/midi/: i_midi_manager.h  midi_manager.cpp  midi_manager.h  midi_manager_mapping.cpp  midi_manager_persist.cpp
src/presets/: i_preset_manager.h  i_preset_migrator.h  i_preset_serializer.h  i_preset_storage.h  preset_components.cpp  preset_json.h  (+7 more)
tests/: test_audio_graph.cpp  test_cabinet_sim_ir.cpp  test_effects.cpp  test_fixtures.h  test_framework.h  test_gui_manager.cpp  test_json_serialization.cpp  test_main.cpp  test_metronome.cpp  test_midi_manager.cpp  test_mocks.h  test_preset_manager.cpp  test_tempo.cpp  test_unsaved_preset.cpp
web/: shell.html
(+35040 files in other folders)
